project four: Fix left alignment of text on shows page

--- a/brainstation/web-dev-ft/ft-course/week-4/project/css/_mixins.scss
+++ b/brainstation/web-dev-ft/ft-course/week-4/project/css/_mixins.scss
@@ -45,7 +45,7 @@
 
 @mixin showsContainer()
 {
-    width: 75%;
+    width: 85%;
     margin: 0 auto;
 }
 @mixin showsTable()
