--- a/brainstation/web-dev-ft/ft-course/week-4/project/css/style.scss
+++ b/brainstation/web-dev-ft/ft-course/week-4/project/css/style.scss
@@ -233,7 +233,7 @@ table {
                     }
                 }        
                 .shows__header--spacing {
-                    width: 45%;
+                    width: 55%;
                 }    
             }
 
